--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wells5609/php-util",
     "type": "library",
-    "description": "Helpful PHP utility functions.",
+    "description": "Commonly used helpers and utilities for PHP.",
     "keywords": ["Utility", "Utilities", "Common", "Helpers"],
     "homepage": "https://github.com/wells5609/PHP-Util",
     "license": "MIT",
